--- a/src/styles.css
+++ b/src/styles.css
@@ -21,15 +21,20 @@
 
 .hitBoard {
   display: grid;
-  grid-template-columns: repeat(3, 50px);
-  grid-template-rows: repeat(3, 50px);
+  grid-template-columns: repeat(3, 35px);
+  grid-template-rows: repeat(3, 35px);
   background-color: black;
   gap: 3px;
-  width: 152px;
+  width: 111px;
 }
 
 .hitBoardWrapper {
   width: 100%;
   display: flex;
   justify-content: center;
+}
+
+.hitBrick {
+  width: 35px;
+  height: 35px;
 }
